# eltdx

./: .gitignore  ACTOR_REFACTOR_FIX_PROGRESS.md  ACTOR_REFACTOR_PLAN.md  ACTOR_REFACTOR_PROGRESS.md  ACTOR_REFACTOR_RESULT.md  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  pages.yml  publish.yml
docs/: API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  COMMANDS_7709.md  DEBUG_GUIDE.md  EXAMPLES.md  F10_7615.md  FIELD_MIGRATION.md  FIELD_REFERENCE.md  GITHUB_PAGES.md  MCP.md  METHOD_REFERENCE.md  MIGRATION_FROM_OLD.md  PRODUCT.md  README.md  ROADMAP.md  UPDATE_FROM_0_5_1.md  index.md
docs/assets/: interface-catalog-data.js  interface-catalog.css  interface-catalog.js
docs/helpers/: README.md  个股概念板块.md  复权K线.md  批量行情表.md  概念板块成分股.md  短线指标.md  竞价数据.md  股票信息汇总.md
docs/methods/: 7709-0925竞价成交快照.md  7709-K线周期线.md  7709-代码数量.md  7709-代码表.md  7709-全量K线分页.md  7709-分时副图.md  7709-分类行情.md  7709-历史成交明细.md  7709-增量刷新推送队列.md  7709-小走势图.md  7709-当日分时.md  7709-当日成交明细.md  7709-心跳.md  7709-批量快照.md  7709-指定日期历史分时.md  7709-指定日期股本.md  7709-换手率.md  7709-握手.md  7709-旧版批量行情.md  7709-服务器文件读取.md  7709-本地复权因子.md  7709-特殊品种涨跌停限制.md  7709-股本变迁GBBQ.md  7709-财务基础信息.md  7709-近期历史分时.md  7709-除权除息整理.md  7709-集合竞价明细.md  F10-个股总评.md  F10-主营构成.md  F10-估值市场数据.md  F10-公司概况.md  F10-公司资讯研报.md  F10-分红融资.md  F10-增发获配.md  F10-市场行业排名.md  F10-新闻公告路演.md  F10-沪深股通持仓.md  F10-热点题材.md  F10-盈利预测.md  F10-股东增减持.md  (+9 more)
docs/releases/: v1.0.1.md  v1.0.2.md  v1.1.0.md  v1.2.0.md
scripts/: README.md  benchmark_actor_transport.py  stress_actor_transport.py  verify_actor_performance.py
scripts/smoke/: export_auction_925_daily.py  live_smoke.py  smoke_codes.py  smoke_f10.py  smoke_kline.py  smoke_minute.py  smoke_trade.py  smoke_workday.py
scripts/validation/: export_live_validation.py
src/eltdx/: __init__.py  cli.py  client.py  equity.py  exceptions.py  f10_smoke.py  hosts.py  mcp.py  mcp_server.py  mcp_tools.py  serialization.py  smoke.py  stats.py  workday.py
src/eltdx/api/: __init__.py  auctions.py  bars.py  base.py  codes.py  corporate.py  health.py  limits.py  minutes.py  quotes.py  resources.py  trades.py
src/eltdx/f10/: __init__.py  client.py  models.py
src/eltdx/helpers/: __init__.py  core.py  shortline.py
src/eltdx/models/: __init__.py  auction.py  corporate.py  kline.py  limit.py  minute.py  quote.py  resource.py  response.py  trade.py
src/eltdx/protocol/: __init__.py  codec.py  constants.py  frame.py  unit.py
src/eltdx/protocol/commands/: __init__.py  auctions.py  codec.py  corporate.py  klines.py  limits.py  minutes.py  quotes.py  registry.py  session.py  (+3 more)
src/eltdx/transport/: __init__.py  actor.py  base.py  memory.py  pool.py  push.py  socket.py
tests/: actor_support.py  test_actor_performance_evidence.py  test_actor_support.py  test_client.py  test_f10.py  test_frame_stream.py  test_helpers.py  test_mcp.py  test_pages.py  test_protocol_7709.py  test_push_buffer.py  test_resources.py  test_shortline_helpers.py  test_socket_transport.py  test_transport_actor.py  test_transport_actor_regressions.py  test_transport_failover_regressions.py  test_transport_lifecycle.py  test_transport_lifecycle_regressions.py  test_transport_pool.py  test_transport_pool_regressions.py  test_transport_retirement_regressions.py  test_transport_stress.py
tests/unit/: test_mcp_server.py  test_mcp_tools.py
