[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "eltdx"
version = "0.5.1"
description = "通达信行情协议 Python 库，支持快照、分时、逐笔、K 线、集合竞价和历史 09:25 竞价接口"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
license-files = ["LICENSE"]
authors = [{name = "ax"}]
keywords = [
  "tongdaxin",
  "tdx",
  "market-data",
  "finance",
  "stocks",
  "a-share",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Financial",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/electkismet/eltdx"
Repository = "https://github.com/electkismet/eltdx"
Documentation = "https://github.com/electkismet/eltdx/tree/main/docs"
Issues = "https://github.com/electkismet/eltdx/issues"
Changelog = "https://github.com/electkismet/eltdx/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8.0",
]
mcp = [
  "mcp>=1.27",
]

[project.scripts]
eltdx-mcp = "eltdx.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/eltdx"]

[tool.pytest.ini_options]
markers = [
  "integration: tests that require live TDX servers",
]
testpaths = ["tests"]
