[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "eltdx"
version = "1.0.2"
description = "通达信 7709 行情与 7615 F10 资料 Python 客户端"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "ELTDX contributors" }
]
keywords = ["tongdaxin", "tdx", "market-data", "a-share", "protocol", "f10"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Office/Business :: Financial :: Investment",
  "Typing :: Typed",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/electkismet/eltdx/tree/main/docs"
Source = "https://github.com/electkismet/eltdx"
Issues = "https://github.com/electkismet/eltdx/issues"

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8.0",
]
mcp = [
  "mcp>=1.0",
]

[project.scripts]
eltdx-smoke = "eltdx.cli:smoke"
eltdx-f10-smoke = "eltdx.cli:f10_smoke"
eltdx-mcp = "eltdx.mcp:main"

[tool.hatch.build.targets.sdist]
include = [
  "/README.md",
  "/LICENSE",
  "/docs",
  "/scripts",
  "/src",
  "/tests",
  "/pyproject.toml",
]

[tool.hatch.build.targets.wheel]
packages = ["src/eltdx"]

[tool.hatch.build.targets.wheel.force-include]
"src/eltdx/tdx_server.json" = "eltdx/tdx_server.json"
"docs" = "eltdx/docs"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
